<resources>
    <string name="google_maps_key">AIzaSyAByJNQVORLPeY_3g3Y5KssRM3-PHkbsjw</string>
    <string name="app_name">Foodie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Home Fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Popular">Most Popular</string>
    <string name="Cuisines">Cuisines</string>
    <string name="Budget">On a Budget</string>
    <string name="Friends">With Friends</string>
    <string name="Discounts">Discounts</string>
    <string name="Categories">All Categories</string>

    <!--All-->
    <string name="SeeAll">See All</string>
    <string name="Recommend">RECOMMENDED FOR YOU</string>
    <string name="Shop1">Restaurant Moosmatt</string>
    <string name="Shoptype">Italian,Haute...</string>
    <string name="separator">.</string>
    <string name="price">$$$$</string>
    <string name="star_count">123</string>
    <string name="open">Open now</string>
    <string name="close">Closed</string>
    <string name="title_activity_most_popular_shops">Most Popular</string>
    <string name="filter">FILTER</string>
    <string name="testimonial">YOUR FRIENDS\'S IMPRESSIONS</string>
</resources>
