<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:context=".Fragment.HomeFragment">

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topPanel"
            app:layout_constraintGuide_percent="0.32" />
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:stretchColumns="*"
            android:background="@color/colorGray"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/topPanel">

        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1">
           <com.soesan.foodie.UI.TopPanelButtonView
                   android:id="@+id/btn_popular"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_margin="@dimen/button_gap"
                   android:layout_column="0"
                   app:text="@string/Popular"
                   app:image="@drawable/ic_outline_thumb_up_24px"/>

            <com.soesan.foodie.UI.TopPanelButtonView
                    android:id="@+id/btn_cuisines"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/button_gap"
                    android:layout_column="1"
                    app:text="@string/Cuisines"
                    app:image="@drawable/ic_outline_local_dining_24px"/>

            <com.soesan.foodie.UI.TopPanelButtonView
                    android:id="@+id/btn_budget"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/button_gap"
                    android:layout_column="2"
                    app:text="@string/Budget"
                    app:image="@drawable/ic_outline_fastfood_24px"/>


        </TableRow>
        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1">

            <com.soesan.foodie.UI.TopPanelButtonView
                    android:id="@+id/btn_friends"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/button_gap"
                    android:layout_column="0"
                    app:text="@string/Friends"
                    app:image="@drawable/ic_outline_group_24px"/>

            <com.soesan.foodie.UI.TopPanelButtonView
                    android:id="@+id/btn_discounts"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/button_gap"
                    android:layout_column="1"
                    app:text="@string/Discounts"
                    app:image="@drawable/ic_outline_monetization_on_24px"/>

            <com.soesan.foodie.UI.TopPanelButtonView
                    android:id="@+id/btn_categories"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/button_gap"
                    android:layout_column="2"
                    app:text="@string/Categories"
                    app:image="@drawable/ic_outline_category_24px"/>

        </TableRow>

    </TableLayout>


</android.support.constraint.ConstraintLayout>